--- a/templates/person/export_mail.html.twig
+++ b/templates/person/export_mail.html.twig
@@ -20,8 +20,8 @@
 {% endblock %}
 
 {% block content %}
-    <div class="panel panel-primary">
-        <div class="panel-body">
+    <div class="card bg-primary">
+        <div class="card-body">
             <textarea id="showlist" class="export">{{ mails }}</textarea>
         </div>
     </div>
