--- a/templates/register/register.html.twig
+++ b/templates/register/register.html.twig
@@ -3,21 +3,21 @@
 {% block headline %}Adhésion - enregistrement{% endblock %}
 
 {% block action %}
-    <li class="panel panel-primary">
-        <div class="panel-heading">
-            Pour s'inscrire au site et pouvoir adhérer à {{ structure }}, il est nécessaire d'indiquer des coordonnées postales, e-mail et téléphoniques ainsi que quelques informations d'état-civil. Ces informations sont nécessaires au fonctionnement interne de {{ structure }} qui s'engage à ne pas les diffuser à quelque tiers que ce soit sans votre consentement exprès. Nous vous recommandons d'indiquer vos coordonnées professionnelles ici.
+    <li class="card text-white">
+        <div class="card-body bg-primary">
+            <p class="card-text">Pour s'inscrire au site et pouvoir adhérer à {{ structure }}, il est nécessaire d'indiquer des coordonnées postales, e-mail et téléphoniques ainsi que quelques informations d'état-civil. Ces informations sont nécessaires au fonctionnement interne de {{ structure }} qui s'engage à ne pas les diffuser à quelque tiers que ce soit sans votre consentement exprès. Nous vous recommandons d'indiquer vos coordonnées professionnelles ici.</p>
         </div>
     </li>
-    <li class="panel panel-danger">
-        <div class="panel-heading">
-            <p>Vous vous apprêtez à adhérer à {{ structure }} en réglant la cotisation.</p>
-            <p>Si plusieurs tarifs d'adhésion sont proposés, vous devrez fournir les éventuelles pièces justificatives du tarif demandé avant validation de votre adhésion.</p>
+    <li class="card text-white">
+        <div class="card-body bg-danger">
+            <p class="card-text">Vous vous apprêtez à adhérer à <b>{{ structure }}</b> en réglant la cotisation.</p>
+            <p class="card-text">Si plusieurs tarifs d'adhésion sont proposés, vous devrez fournir les éventuelles pièces justificatives du tarif demandé avant validation de votre adhésion.</p>
         </div>
     </li>
 {% endblock %}
 
 {% block content %}
-    <div class="panel panel-default">
+    <div class="card">
         {{ form(form) }}
     </div>
 {% endblock %}
