--- a/templates/bundles/FOSUserBundle/Security/login.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login.html.twig
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="panel panel-default">
+    <div class="card">
     {% if error %}
         <div class="alert alert-danger fade in">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
