--- a/templates/parameter/index.html.twig
+++ b/templates/parameter/index.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="panel panel-default">
+    <div class="card">
         {{ form(parameter_form) }}
     </div>
 {% endblock %}
