--- a/templates/payment/edit.html.twig
+++ b/templates/payment/edit.html.twig
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="panel panel-default">
+    <div class="card">
         {{ form(form) }}
     </div>
 {% endblock %}
