--- a/templates/payment/index.html.twig
+++ b/templates/payment/index.html.twig
@@ -19,7 +19,7 @@
 {% endblock %}
 
 {% block content %}
-    <ul class="entities gateways list-group panel panel-default">
+    <ul class="entities gateways list-group card">
         {% for gateway in gateways %}
             <li class="entity gateway list-group-item row">
                 <span class="float-right">
