--- a/templates/person/edit.html.twig
+++ b/templates/person/edit.html.twig
@@ -22,7 +22,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="panel panel-default">
+    <div class="card">
         {{ form(person_form) }}
     </div>
 {% endblock %}
