--- a/templates/person/edit_me.html.twig
+++ b/templates/person/edit_me.html.twig
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="panel panel-default row">
+    <div class="card row">
         <form method="POST" class="form-horizontal" role="form">
             {{ form_widget(form) }}
             <button type="submit" class="btn btn-default float-right">Enregistrer</button>
