--- a/templates/person/install.html.twig
+++ b/templates/person/install.html.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="panel panel-default">
+    <div class="card">
         <form method="post">
             {{ form_widget(form) }}
             <button type="submit">Enregistrer</button>
