--- a/templates/receipt/index.html.twig
+++ b/templates/receipt/index.html.twig
@@ -10,8 +10,8 @@
 
 {% block action %}
         {% if not is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-            <li class="panel panel-primary">
-                <div class="panel-heading">Pour adhérer, veuillez cliquer sur la receipt de votre région, et vous enregistrer en 3 étapes : validation du formulaire, confirmation de l'adresse e-mail et paiement de la cotisation.</div>
+            <li class="card bg-primary">
+                <div class="card-header">Pour adhérer, veuillez cliquer sur la receipt de votre région, et vous enregistrer en 3 étapes : validation du formulaire, confirmation de l'adresse e-mail et paiement de la cotisation.</div>
             </li>
         {% endif %}
 
@@ -27,7 +27,7 @@
 {% endblock %}
 
 {% block content %}
-    <ul class="entities receipts list-group panel panel-default">
+    <ul class="entities receipts list-group card">
         {% for receipt in receipts %}
             <li class="entity receipt list-group-item row">
                 {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_STRUCTURE') %}
