--- a/templates/receipt/printPDF.html.twig
+++ b/templates/receipt/printPDF.html.twig
@@ -27,8 +27,8 @@
     </head>
     <body>
         <div class="container">
-            <div class="panel panel-default">
-                <div class="panel-header jumbotron row">
+            <div class="card">
+                <div class="card-header jumbotron row">
                     <div class="col-xs-2"><img src="{{ absolute_url(asset('uploads/' ~ membership.structure.logo)) }}" alt="Logo de {{ membership.structure.name }}" class="logo-large" /></div>
                     {% if param('reg_' ~ membership.structure.slug ~ '_periodicity') == '+ 1 year' %}
                         {% set period = membership.expiredOn|date('Y') %}
@@ -41,7 +41,7 @@
                     {% endif %}
                     <h1 class="col-xs-10 centered">Reçu fiscal {{ period }}</h1>
                 </div>
-                <div class="panel-body row">
+                <div class="card-body row">
                     <div class="col-xs-2 title">Nom :</div>
                     <div class="col-xs-4 value">{{ membership.person.surname }}</div>
                     <div class="col-xs-2 title">Prénom :</div>
@@ -62,7 +62,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel-footer jumbotron row">
+                <div class="card-footer jumbotron row">
                     <span class="float-right"><img src="{{ absolute_url(asset('uploads/' ~ membership.structure.logo)) }}" alt="Logo de {{ membership.structure.name }}" class="logo-large" /></span>
                     {% if membership.structure.fullname is not null %}
                         {{ membership.structure.fullname }}
