--- a/templates/register/import.html.twig
+++ b/templates/register/import.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="panel panel-default">
+    <div class="card">
         {{ form(form) }}
     </div>
 {% endblock %}
