--- a/templates/register/question_edit.html.twig
+++ b/templates/register/question_edit.html.twig
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="panel panel-default">
+    <div class="card">
         {{ form(form) }}
     </div>
 {% endblock %}
