--- a/templates/register/validate.html.twig
+++ b/templates/register/validate.html.twig
@@ -3,7 +3,7 @@
 {% block headline %}Adhésion : {{ membership.person }}{% endblock %}
 
 {% block content %}
-    <div class="panel panel-default">
+    <div class="card">
         {{ form(form) }}
     </div>
 {% endblock %}
