--- a/templates/structure/edit.html.twig
+++ b/templates/structure/edit.html.twig
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="panel panel-default">
+    <div class="card">
         {{ form(form) }}
     </div>
 {% endblock %}
