--- a/templates/structure/index.html.twig
+++ b/templates/structure/index.html.twig
@@ -10,8 +10,8 @@
 
 {% block action %}
     {% if not is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-        <li class="panel panel-primary">
-            <div class="panel-heading">Pour adhérer, veuillez cliquer sur la structure de votre région, et vous enregistrer en 3 étapes : validation du formulaire, confirmation de l'adresse e-mail et paiement de la cotisation.</div>
+        <li class="card">
+            <div class="card-header bg-primary text-white">Pour adhérer, veuillez cliquer sur la structure de votre région, et vous enregistrer en 3 étapes : validation du formulaire, confirmation de l'adresse e-mail et paiement de la cotisation.</div>
         </li>
     {% endif %}
 
