Adaptation du thème à Bootstap4

--- a/templates/fee/index.html.twig
+++ b/templates/fee/index.html.twig
@@ -28,7 +28,7 @@
                         <ul class="dropdown-menu">
                             <li class="action">
                                 <a href="{{ path('core_fee_edit', {'slug': structure.slug, 'id': fee.id}) }}" title="Modifier la tarification '{{ fee }}'" class="edit">
-                                    <i class='fas fa-pencil'></i> Modifier
+                                    <i class='fas fa-pencil-alt'></i> Modifier
                                 </a>
                             </li>
                             <li class="action">
