--- a/templates/receipt/index.html.twig
+++ b/templates/receipt/index.html.twig
@@ -36,7 +36,7 @@
                         <ul class="dropdown-menu">
                             <li class="action">
                                 <a href="{{ path('core_receipt_edit', {'slug': structure.slug, 'id': receipt.id}) }}" title="Modifier l'émetteur de reçu fiscal '{{ receipt.imageName }}'" class="edit">
-                                    <i class='fas fa-pencil'></i> Modifier
+                                    <i class='fas fa-pencil-alt'></i> Modifier
                                 </a>
                             </li>
                             <li class="action">
