--- a/templates/register/question_index.html.twig
+++ b/templates/register/question_index.html.twig
@@ -24,7 +24,7 @@
                     <ul class="dropdown-menu">
                         <li>
                             <a href="{{ path('user_register_question_edit', {'id': question.id, 'slug': slug}) }}" title="Modifier la question complémentaire" class="edit">
-                                <i class='fas fa-pencil'></i> Modifier
+                                <i class='fas fa-pencil-alt'></i> Modifier
                             </a>
                         </li>
                         <li>
