--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -15,38 +15,33 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~bootstrap/scss/bootstrap";
 
-html { }
-body { font: 13px arial, sans-serif; background-color: #AAAAAA; margin: 0; padding: 0;}
 img { border: none; }
+a { color: #524F46; outline: none; text-decoration: none; }
+a:hover { color: #111111; text-decoration: none; }
+/*
 select, input, button, textarea { font: 99% arial, sans-serif; outline: none; }
 table { text-align: left; background-color: #dfdfdf; border-radius: 5px; border-collapse: collapse; }
 td, th { padding: 7px; margin: 0; }
 th { text-align: center; font-weight: bold; }
 pre, code, kbd, samp, tt { font-family: monospace; font-size: 99%; line-height:100% }
-a { color: #524F46; outline: none; text-decoration: none; }
-a:hover { color: #111111; text-decoration: underline; }
 strong { font-weight: bold; }
 em { font-style: italic; }
 div { margin: 0; padding: 0; }
 input:invalid, textarea:invalid, select:invalid  { background-color: #faa; outline: none; }
 
-.container-fluid { background-color: #EEEEEE; }
-
 .flasherror { background-color: #fdef55; color: red; }
 .flashnotice { background-color: #99ff99; color: black; }
 div.flasherror, div.flashnotice { padding: 2px 10px 2px 10px; width: auto; font-style: italic; }
 
-#header { margin: 0; padding: 0; border: 0; background-color: #252525; }
-#header img, h1, span { vertical-align: middle; margin: 0; padding: 0; }
+#header { margin: 0; padding: 0; border: 0; width: 100%; }
 #header h1 { padding: 15px 10px; font-size: 2.0em; color: #EEEEEE; display: inline-block; }
 #header a { text-decoration: none; color: #252525; }
-#header img { padding: 10px 0px; }
 #header ul { text-align: right; font-weight: bold; font-size: 90%; padding: 5px; }
 #header li { list-style: none; }
 #header li a { color: #252525; }
 #header li a:hover { color: #EEEEEE; }
 
-#menu { font-size: 110%; font-weight: bold; background-color: #252525; padding: 0; margin: 0; }
+#menu { font-size: 110%; font-weight: bold; background-color: #252525; }
 #menu ul { margin: 0; padding: 14px 0; border: 0; }
 #menu li { list-style: none; padding: 0; }
 #menu li:hover { }
@@ -80,8 +75,6 @@ div.flasherror, div.flashnotice { padding: 2px 10px 2px 10px; width: auto; font-
 #content ul.actions { display: inline-block; float: right; text-align: right; }
 #content ul.actions li { display: inline-block; }
 #content ul.entities, #content ul.subentities { display: block; padding: 5px 5px 5px 10px; }
-#content li.entity, #content li.subentity { display: block; }
-#content li.entity { margin: 5px; }
 #content div.entity_title, #content div.entity_item { display: inline-block; }
 #content div.entity_title { font-weight: bold; font-size: 150%; }
 #content div.subentity_title { font-weight: bold; }
@@ -143,15 +136,6 @@ div.flasherror, div.flashnotice { padding: 2px 10px 2px 10px; width: auto; font-
 .btn-success a, .btn-success a:hover { color: #fff; }
 .btn-info a, .btn-info a:hover { color: #fff; }
 
-#footer { padding-top: 10px; font-size: 90%; height: 50px; background-color: #AAAAAA; }
-#footer ul{ padding: 10px; }
-#footer li{ list-style: none; display: inline-block; }
-#footer li a{ text-decoration: none; color: #77766F; }
-#footer li a:hover{ color: #333; text-decoration: underline; }
-#footer .miniature { font-family: arial,sans-serif; font-size: 80%; text-align: right; padding: 10px; color: #666; }
-#footer .miniature img{ vertical-align: middle; }
-#footer form{ margin: 10px 0; color: #5f6364; }
-
 .error_list{ color: red; }
 .flash_notice{ margin: 3px 0; padding: 7px; background-color: #cfc; }
 .flash_error{ margin: 3px 0; padding: 7px; background-color: #f33; color: #fff; }
@@ -171,13 +155,32 @@ div.flasherror, div.flashnotice { padding: 2px 10px 2px 10px; width: auto; font-
 .inline { display: inline-block; }
 .right { text-align: right; }
 .left { text-align: left; }
-
-.row { margin-left: 0; margin-right: 0; }
+*/
+//.row { margin-left: 0; margin-right: 0; }
 .mapael .map { margin-left: auto; margin-right: auto; position: relative; max-width: 800px; padding: 20px; }
 .mapael .mapTooltip { position: absolute; background-color: #fff; moz-opacity: 0.90; opacity: 0.90; filter: alpha(opacity=90); border-radius: 5px; padding: 10px; z-index: 1000; max-width: 200px; display: none; color: #343434; }
 
-img.sign { display: block; max-width: 100px; max-height: 80px; }
-img.logo { display: block; max-width: 60px; max-height: 40px; }
-img.logo-small { display: block; max-width: 40px; max-height: 40px; }
-img.logo-description { display: block; max-width: 120px; }
-img.logo-large { display: block; max-width: 100px; max-height: 60px; }
+img.sign { max-width: 100px; max-height: 80px; }
+img.logo {  max-width: 60px; max-height: 40px; }
+img.logo-small { max-width: 40px; max-height: 40px; }
+img.logo-description { max-width: 120px; }
+img.logo-large { max-width: 100px; max-height: 60px; }
+
+label { margin-bottom: 0; }
+textarea { width: 99%; min-height: 200px; }
+
+.btn-primary a { color: #fff; }
+.btn-primary a:hover { color: #fff; }
+.btn-primary a:focus { color: #fff; }
+.btn-primary a:active { color: #fff; }
+
+#menu a:hover { color: #fafafa; }
+#menu a { color: #e1e1e1; }
+
+#footer { height: 50px; background-color: #AAAAAA; font-size: small; }
+#footer a{ text-decoration: none; color: #77766F; }
+#footer a:hover{ color: #333; text-decoration: underline; }
+#footer .miniature { font-family: arial,sans-serif; font-size: 80%; text-align: right; padding: 10px; color: #666; }
+#footer .miniature img{ vertical-align: middle; }
+
+.fas { padding-right: .25em; }
