--- a/templates/bundles/FOSUserBundle/Security/login.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login.html.twig
@@ -1,4 +1,4 @@
-{% extends "layout.html.twig" %}
+{% extends "bundles/FOSUserBundle/layout.html.twig" %}
 
 {% trans_default_domain 'FOSUserBundle' %}
 
@@ -13,8 +13,7 @@
     </li>
 {% endblock %}
 
-{% block content %}
-    <div class="card">
+{% block fos_user_content %}
     {% if error %}
         <div class="alert alert-danger fade in">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
@@ -22,30 +21,23 @@
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
         <fieldset>
             <div class="form-group">
-                <label for="username" class="control-label col-sm-3 required">{{ 'security.login.username'|trans }}</label>
-                <div class="col-sm-9">
-                    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" class="form-control" />
-                </div>
+                <label for="username" class="control-label required">{{ 'security.login.username'|trans }}</label>
+                <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" class="form-control" />
             </div>
             <div class="form-group">
-                <label for="password" class="control-label col-sm-3 required">{{ 'security.login.password'|trans }}</label>
-                <div class="col-sm-9">
-                    <input type="password" id="password" name="_password" required="required" class="form-control"/>
-                </div>
+                <label for="password" class="control-label required">{{ 'security.login.password'|trans }}</label>
+                <input type="password" id="password" name="_password" required="required" class="form-control"/>
             </div>
             <div class="form-group">
-                <div class="col-sm-3"></div>
-                <div class="col-sm-9">
-                    <div class="checkbox">
-                        <label for="remember_me" class="control-label col-sm-3 optional">
-                            <input type="checkbox" id="remember_me" name="_remember_me" value="on"/>
-                            {{ 'security.login.remember_me'|trans }}
-                        </label>
-                    </div>
+                <div class="checkbox">
+                    <label for="remember_me" class="control-label optional">
+                    <input type="checkbox" id="remember_me" name="_remember_me" value="on"/>
+                        {{ 'security.login.remember_me'|trans }}
+                     </label>
                 </div>
             </div>
             <div>
-                <button type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" class="btn btn-default">{{ 'security.login.submit'|trans }}</button>
+                <button type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" class="btn btn-primary float-right">{{ 'security.login.submit'|trans }}</button>
             </div>
         </fieldset>
     </form>
