--- a/templates/register/list.html.twig
+++ b/templates/register/list.html.twig
@@ -10,23 +10,21 @@
 
 {% block action %}
     {% if userid is not null %}
-        <li class="btn btn-info">
-            <a href="{{ path('user_register_index', {'slug': slug}) }}" title="Revenir à la liste des adhérents">
-                {{ person }}
-            </a>
-        </li>
+        <a class="btn btn-info text-white" href="{{ path('user_register_index', {'slug': slug}) }}" title="Revenir à la liste des adhérents">
+            <i class="fas fa-arrow-left"></i> {{ person }}
+        </a>
     {% endif %}
     {% if slug is not null %}
         {% if reJoinable == true %}
             <li class="btn btn-primary">
                 <a href="{{ path('user_register_register', {'slug': slug, 'rejoin': true}) }}&{{ app.request.queryString }}">
-                    <i class='fas fa-euro'></i> Ré-adhérer
+                    <i class='fas fa-euro-sign'></i> Ré-adhérer
                 </a>
             </li>
             {% if 'ROLE_STRUCTURE' not in person.user.roles %}
                 <li class="btn btn-primary">
-                    <a href="{{ path('core_structure_index') }}" title="Adhérer à une autre structure">
-                        <i class='fas fa-euro'></i> Autre structure
+                    <a href="{{ path('core_structure_map') }}" title="Adhérer à une autre structure">
+                        <i class='fas fa-euro-sign'></i> Autre structure
                     </a>
                 </li>
             {% endif %}
@@ -43,123 +41,113 @@
                     </a>
                 {% else %}
                     <a href="{{ path('user_person_promote', {'id': person.id, 'slug': slug}) }}" title="Ajouter des droits d'administration de la structure {{ slug }} à l'utilisateur">
-                        <i class='fas fa-star-empty'></i> Promouvoir
+                        <i class='fas fa-star-half'></i> Promouvoir
                     </a>
                 {% endif %}
             </li>
         {% endif %}
     {% else %}
         <li class="btn btn-primary">
-            <a href="{{ path('core_structure_index') }}">
-                <i class='fas fa-euro'></i> Adhérer
+            <a href="{{ path('core_structure_map') }}">
+                <i class='fas fa-euro-sign'></i> Adhérer
             </a>
         </li>
     {% endif %}
 {% endblock %}
 
 {% block content %}
-    <ul class="entities list-group">
-        <li class="list-group-item">
-            <span class="btn btn-primary float-right">
-                <a href="{{ path('user_person_edit_me') }}?{{ app.request.queryString }}" title="Modifier">
-                    <i class='fas fa-pencil'></i> Modifier
-                </a>
-            </span>
-            <div class="title">État civil</div>
-            <div class="">{{ person.title }} {{ person.surname }} {{ person.name }}</div>
-            <div class="">Naissance : {{ person.birthday|date('d/m/Y') }} à {{ person.birthplace }}</div>
-        </li>
-        <li class="list-group-item">
-            <span class="btn btn-primary float-right">
-                <a href="{{ path('fos_user_change_password') }}?{{ app.request.queryString }}" title="Modifier le mot de passe">
-                    <i class='fas fa-lock'></i> Mot de passe
-                </a>
-            </span>
-            <div class="title">Contact</div>
-            <div class=""><i class='fas fa-phone'></i> {{ person.phone }}</div>
-            <div class=""><i class='fas fa-home'></i> {% for item in person.address %} {{ item }} {% endfor %}</div>
-            <div class=""><i class='fas fa-envelope'></i> {{ person.user.email }}</div>
-        </li>
-    </ul>
-    <ul class="entities list-group">
+    <div class="card">
+        <div class="card-header bg-primary text-white text-center">Informations personnelles</div>
+        <div class="card-body">
+            <p class="card-text p-0 m-0"><i class="fas fa-user"></i> {{ person.title }} {{ person.surname }} {{ person.name }}</p>
+            {% set age = date().diff(person.birthday) %}
+            <p class="card-text p-0 m-0"><i class="fas fa-birthday-cake"></i> {{ person.birthday|date('d/m/Y') }} à {{ person.birthplace }} ({{ (age.days/365)|round(0, 'floor') }} ans)</p>
+            <p class="card-text p-0 m-0 mt-2"><i class='fas fa-phone'></i> {{ person.phone }}</p>
+            <p class="card-text p-0 m-0"><i class='fas fa-home'></i> {% for item in person.address %} {{ item }} {% endfor %}</p>
+            <p class="card-text p-0 m-0"><i class='fas fa-envelope'></i> {{ person.user.email }}</p>
+        </div>
+        <div class="card-footer text-center">
+            <a class="btn btn-primary btn-sm" href="{{ path('user_person_edit_me') }}?{{ app.request.queryString }}" title="Modifier">
+                <i class='fas fa-pencil-alt'></i> Modifier
+            </a>
+            <a class="btn btn-primary btn-sm" href="{{ path('fos_user_change_password') }}?{{ app.request.queryString }}" title="Modifier le mot de passe">
+                <i class='fas fa-lock'></i> Mot de passe
+            </a>
+        </div>
+    </div>
+
+    <div class="card mt-3">
+        <div class="card-header bg-primary text-white text-center">Adhésions</div>
+        <ul class="card-body card-columns">
         {% for membership in memberships %}
-            <li class="list-group-item row col-lg-4 col-md-6 col-sm-12">
-                <span class="float-right">
-                    <button class="btn btn-primary dropdown-toogle" data-toggle="dropdown"><i class='fas fa-bars'></i> <span class="caret"></span></button>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="{{ path('user_register_infos', {'id': membership.id, 'userid': userid}) }}" title="Afficher les réponses aux questions complémentaires">
-                                <i class='fas fa-question-circle'></i> Questions complémentaires
-                            </a>
-                        </li>
+            <li class="card">
+                <div class="card-header text-center">
+                    {% if membership.structure.logo is not null %}
+                        <img src="{{ asset('uploads/' ~ membership.structure.logo) }}" alt="{{ membership.structure.logo }}" class="logo"/>
+                    {% endif %}
+                    {{ membership.structure.name }}
+                </div>
+                <div class="card-body">
+                    <p class="card-text p-0 m-0"><i class="fas fa-calendar-times"></i> <i class="fas fa-long-arrow-alt-right"></i> {{ membership.expiredOn|date('d/m/Y') }}</p>
+                    <p class="card-text p-0 m-0"><i class="fas fa-euro-sign"></i> {{ (membership.amount/100)|number_format(2,',',' ') }} € par {{ membership.method.label|lower }}
+                    {% if membership.payedOn is not null %}
+                    le {{ membership.payedOn|date('d/m/Y') }}.</p>
+                    {% else %}
+                        . <span class="text-danger">La transaction na pas été validée.</span></p>
+                        {% if membership.method.config['address']['city'] is defined and membership.method.config['address']['city'] is not null %}
+                            <p class="card-text p-0 m-0" title="Chèque à l'ordre de {{ membership.method.config['payableTo'] }} ; {{ membership.method.config['address']['number'] }} {{ membership.method.config['address']['type'] }} {{ membership.method.config['address']['street'] }}, {{ membership.method.config['address']['complement'] }}, {{ membership.method.config['address']['code'] }} {{ membership.method.config['address']['city'] }}, {{ membership.method.config['address']['country'] }}">
+                                <i class='fas fa-globe'></i> Chèque à l'ordre de {{ membership.method.config['payableTo'] }} ; {{ membership.method.config['address']['number'] }} {{ membership.method.config['address']['type'] }} {{ membership.method.config['address']['street'] }}, {{ membership.method.config['address']['complement'] }}, {{ membership.method.config['address']['code'] }} {{ membership.method.config['address']['city'] }}, {{ membership.method.config['address']['country'] }}
+                            </p>
+                        {% endif %}
+                        {% if membership.method.config['iban'] is defined and not null %}
+                            <p class="card-text p-0 m-0" title="IBAN : {{ membership.method.config['iban'] }}">
+                                <i class='fas fa-comment'></i>IBAN : {{ membership.method.config['iban'] }}
+                            </p>
+                        {% endif %}
+                    {% endif %}
+                    </p>
+                </div>
+                <div class="card-footer text-center">
+                    <div class="btn-group-vertical">
+                        <a class="btn btn-primary btn-sm" href="{{ path('user_register_infos', {'id': membership.id, 'userid': userid}) }}" title="Afficher les réponses aux questions complémentaires">
+                            <i class='fas fa-question-circle'></i> Questions
+                        </a>
                         {% if membership.status == 'validated' %}
-                            <li>
-                                <a href="{{ path('core_receipt_build', {'id': membership.id}) }}" title="Télécharger le reçu fiscal">
-                                    <i class='fas fa-edit'></i> Reçu fiscal
-                                </a>
-                            </li>
+                            <a class="btn btn-primary btn-sm" href="{{ path('core_receipt_build', {'id': membership.id}) }}" title="Télécharger le reçu fiscal">
+                                <i class='fas fa-edit'></i> Reçu fiscal
+                            </a>
                         {% else %}
                             {% if is_granted('ROLE_STRUCTURE') %}
-                                <li>
-                                    <a href="{{ path('user_register_edit', {'id': membership.id, 'userid': userid, 'slug': slug}) }}" title="Modifier l'adhésion">
-                                        <i class='fas fa-pencil'></i> Modifier
-                                    </a>
-                                </li>
+                                <a class="btn btn-primary btn-sm" href="{{ path('user_register_edit', {'id': membership.id, 'userid': userid, 'slug': slug}) }}" title="Modifier l'adhésion">
+                                    <i class='fas fa-pencil-alt'></i> Modifier
+                                </a>
                             {% endif %}
                             {% if param('reg_' ~ slug ~ '_print') %}
-                                <li>
-                                    <a href="{{ path('user_register_print', {'id': membership.id, 'userid': userid, 'slug': slug}) }}" title="Fiche d'adhésion à retourner signée">
-                                        <i class='fas fa-list-alt'></i> Fiche d'adhésion
-                                    </a>
-                                </li>
+                                <a class="btn btn-primary btn-sm" href="{{ path('user_register_print', {'id': membership.id, 'userid': userid, 'slug': slug}) }}" title="Fiche d'adhésion à retourner signée">
+                                    <i class='fas fa-list-alt'></i> Fiche d'adhésion
+                                </a>
                             {% endif %}
                         {% endif %}
                         {% if membership.payedOn is null %}
                             {% if is_granted('ROLE_ADMIN') %}
-                                <li>
-                                    <a href="{{ path('user_register_validate', {'id': membership.id, 'userid': userid}) }}" title="Valider la réception du paiement pour cette adhésion">
+                                <a class="btn btn-primary btn-sm" href="{{ path('user_register_validate', {'id': membership.id, 'userid': userid}) }}" title="Valider la réception du paiement pour cette adhésion">
                                     <i class='fas fa-check-circle'></i> Valider
-                                    </a>
-                                </li>
+                                </a>
                             {% endif %}
-                            <li>
-                                <a href="{{ path('user_register_delete', {'id': membership.id, 'userid': userid}) }}" title="Supprimer cette adhésion">
-                                    <i class='fas fa-times-circle'></i> Supprimer
-                                </a>
-                            </li>
+                            <a class="btn btn-primary btn-sm" href="{{ path('user_register_delete', {'id': membership.id, 'userid': userid}) }}" title="Supprimer cette adhésion">
+                                <i class='fas fa-times-circle'></i> Supprimer
+                            </a>
                         {% elseif membership.status == 'paid' %}
-                            <li>
-                                <a href="{{ path('user_register_validate', {'id': membership.id, 'userid': membership.person.user.id, view: 'index'}) }}" title="Valider la réception de la fiche signée pour cette adhésion">
-                                    <i class='fas fa-check-circle'></i> Valider la fiche
-                                </a>
-                            </li>
+                            <a class="btn btn-primary btn-sm" href="{{ path('user_register_validate', {'id': membership.id, 'userid': membership.person.user.id, view: 'index'}) }}" title="Valider la réception de la fiche signée pour cette adhésion">
+                                <i class='fas fa-check-circle'></i> Valider la fiche
+                            </a>
                         {% endif %}
-                    </ul>
-                </span>
-                <div class="col-xs-2">
-                    {% if membership.structure.logo is not null %}
-                        <img src="{{ asset('uploads/' ~ membership.structure.logo) }}" alt="{{ membership.structure.logo }}" class="logo"/>
-                    {% endif %}
-                </div>
-                <div class="col-xs-8">
-                    <p>Adhésion jusqu'au {{ membership.expiredOn|date('d/m/Y') }}</p>
-                    <p>Paiement : {{ (membership.amount/100)|number_format(2,',',' ') }} € par {{ membership.method.label|lower }}
-                    {% if membership.payedOn is not null %}
-                        le {{ membership.payedOn|date('d/m/Y') }}.
-                    {% else %}
-                        ; la transaction na pas été validée.
-                        {% if membership.method.config['address']['city'] is defined and not null %}
-                            <span title="Chèque à l'ordre de {{ membership.method.config['payableTo'] }} ; {{ membership.method.config['address']['number'] }} {{ membership.method.config['address']['type'] }} {{ membership.method.config['address']['street'] }}, {{ membership.method.config['address']['complement'] }}, {{ membership.method.config['address']['code'] }} {{ membership.method.config['address']['city'] }}, {{ membership.method.config['address']['country'] }}"><i class='fas fa-globe'></i></span>
-                        {% endif %}
-                        {% if membership.method.config['iban'] is defined and not null %}
-                            <span title="IBAN : {{ membership.method.config['iban'] }}"><i class='fas fa-comment'></i></span>
-                        {% endif %}
-                    {% endif %}
-                    </p>
+                    </div>
                 </div>
             </li>
         {% else %}
             <li class="list-group-item">Aucune adhésion enregistrée.</li>
         {% endfor %}
     </ul>
+    </div>
 {% endblock %}
