--- a/templates/structure/map.html.twig
+++ b/templates/structure/map.html.twig
@@ -10,92 +10,93 @@
 
 {% block action %}
     {% if not is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-        <li class="card">
+        <div class="card">
             <div class="card-header bg-primary text-white">Pour adhérer, veuillez cliquer sur la structure de votre région, et vous enregistrer en 3 étapes : validation du formulaire, confirmation de l'adresse e-mail et paiement de la cotisation.</div>
-        </li>
+        </div>
     {% elseif is_granted('ROLE_ADMIN') %}
-        <li class="btn btn-primary">
-            <a href="{{ path('core_structure_new') }}" title="Ajouter une nouvelle structure">
+            <a class="btn btn-primary" href="{{ path('core_structure_new') }}" title="Ajouter une nouvelle structure">
                 <i class='fas fa-plus'></i> Ajouter
             </a>
-        </li>
+            <a class="btn btn-primary" href="#" title="Afficher les structures désactivées">
+                <i class='fas fa-recycle'></i> Structures désactivées
+            </a>
+            <a class="btn btn-primary" href="#" title="Afficher les structures non localisées">
+                <i class='fas fa-eye-slash'></i> Structures orphelines
+            </a>
     {% endif %}
-    </ul>
-    <ul>
     {% for structure in structures %}
-        <li class="card description structure_{{ structure.slug }}">
-            <div class="card-header bg-primary text-white">
+        <div class="card description structure_{{ structure.slug }} mt-3">
+            <div class="card-header bg-primary text-white text-center">
                 {{ structure.area }} : {{ structure.name }}
             </div>
-            <div class="card-body row">
-                <div class="float-right">
-                {% if structure.email is not null %}
-                    <div>
-                        <a href="mailto:{{ structure.email }}" title="{{ structure.email }}"><i class='fas fa-envelope'></i></a>
-                    </div>
-                {% endif %}
-                {% if structure.phone is not null %}
-                    <div>
-                        <a href="tel:{{ structure.phone }}" title="{{ structure.phone }}"><i class='fas fa-phone'></i></a>
-                    </div>
-                {% endif %}
-                {% if structure.url is not null %}
-                    <div>
-                        <a href="{{ structure.url }}" title="{{ structure.url }}"><i class='fas fa-globe'></i></a>
-                    </div>
-                {% endif %}
-                {% if structure.address['city'] is not null and structure.address['city'] != '-' %}
-                    <div>
-                        <a href="#" title="{{ structure.printableAddress }}"><i class='fas fa-home'></i></a>
-                    </div>
-                {% endif %}
-                </div>
+            <div class="card-body">
                 {% if structure.logo is not null %}
-                    <div class="">
-                        <img src="{{ asset('uploads/' ~ structure.logo) }}" alt="{{ structure.logo }}" class="logo-description"/>
+                    <div class="text-center w-100">
+                        <img class="logo-description" src="{{ asset('uploads/' ~ structure.logo) }}" alt="{{ structure.logo }}"/>
                     </div>
                 {% endif %}
                 {% if structure.fullname is not null %}
-                    <div class="col-sm-12">{{ structure.fullname }}</div>
+                    <p class="card-text font-italic">{{ structure.fullname }}</p>
+                {% endif %}
+                {% if structure.email is not null %}
+                    <p class="card-text m-0 p-0">
+                        <a class="card-text" href="mailto:{{ structure.email }}" title="{{ structure.email }}"><i class='fas fa-envelope'></i> {{ structure.email }}</a>
+                    </p>
+                {% endif %}
+                {% if structure.phone is not null %}
+                    <p class="card-text m-0 p-0">
+                        <a class="card-text" href="tel:{{ structure.phone }}" title="{{ structure.phone }}"><i class='fas fa-phone'></i> {{ structure.phone }}</a>
+                    </p>
+                {% endif %}
+                {% if structure.url is not null %}
+                    <p class="card-text m-0 p-0">
+                        <a class="card-text" href="{{ structure.url }}" title="{{ structure.url }}"><i class='fas fa-globe'></i> {{ structure.url }}</a>
+                    </p>
+                {% endif %}
+                {% if structure.address['city'] is not null and structure.address['city'] != '-' %}
+                    <p class="card-text m-0 p-0">
+                        <a class="card-text" href="#" title="{{ structure.printableAddress }}"><i class='fas fa-home'></i> {{ structure.printableAddress }}</a>
+                    </p>
                 {% endif %}
             </div>
-            <ul class="card-footer btn-group-vertical">
-                <li class="btn btn-primary">
+            <div class="card-footer btn-group-vertical">
                         {% if not is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                        <a href="{{ path('user_register_join', {'slug': structure.slug}) }}" title="Adhérer à la structure {{ structure.name }}">
+                        <a class="btn btn-primary" href="{{ path('user_register_join', {'slug': structure.slug}) }}" title="Adhérer à la structure {{ structure.name }}">
                             <i class='fas fa-edit'></i> Adhérer
                         </a>
                     {% elseif is_granted('ROLE_MEMBER') %}
-                        <a href="{{ path('user_register_join', {'slug': structure.slug, 'rejoin': true}) }}" title="Ré-dhérer à la structure {{ structure.name }}">
+                        <a class="btn btn-primary" href="{{ path('user_register_join', {'slug': structure.slug, 'rejoin': true}) }}" title="Ré-dhérer à la structure {{ structure.name }}">
                             <i class='fas fa-edit'></i> Ré-adhérer
                         </a>
                     {% endif %}
-                </li>
                 {% if is_granted('ROLE_ADMIN') %}
-                    <li class="btn btn-primary">
-                        <a href="{{ path('user_register_index', {'slug': structure.slug}) }}" title="Afficher les adhérents de la structure '{{ structure.name }}'" class="index">
-                            <i class='fas fa-group'></i> Adhérents
+                        <a class="btn btn-primary" href="{{ path('user_register_index', {'slug': structure.slug}) }}" title="Afficher les adhérents de la structure '{{ structure.name }}'" class="index">
+                            <i class='fas fa-users'></i> Adhérents
                         </a>
-                    </li>
-                    <li class="btn btn-primary">
-                        <a href="{{ path('user_register_register', {'slug': structure.slug}) }}" title="Ajouter un adhérent à la structure '{{ structure.name }}'" class="">
+                        <a class="btn btn-primary" href="{{ path('user_register_register', {'slug': structure.slug}) }}" title="Ajouter un adhérent à la structure '{{ structure.name }}'" class="">
                             <i class='fas fa-plus'></i> Ajouter un adhérent
                         </a>
-                    </li>
-                    <li class="btn btn-primary">
-                        <a href="{{ path('parameter_admin_index', {'slug': structure.slug}) }}" title="Afficher les paramètres du site pour la structure '{{ structure.name }}'" class="index">
+                        <a class="btn btn-primary" href="{{ path('parameter_admin_index', {'slug': structure.slug}) }}" title="Afficher les paramètres du site pour la structure '{{ structure.name }}'" class="index">
                             <i class='fas fa-cogs'></i> Paramètres
                         </a>
-                    </li>
                 {% endif %}
-            </ul>
-        </li>
+            </div>
+        </div>
+        {% else %}
+            <div class="noentity structure">
+                Aucune structure enregistrée.
+                {% if is_granted('ROLE_ADMIN') %}
+                    <a href="{{ path('core_structure_new') }}" title="Ajouter une structure">Ajouter une structure</a>.
+                {% else %}
+                    Contactez un administrateur.
+                {% endif %}
+            </div>
     {% endfor %}
 {% endblock %}
 
 {% block content %}
     <div class="structures">
-        <div class="map">Ce site a besoin du JavaScript pour fonctionner. Merci de l'activer ou rendez-vous sur <a href="{{ path('core_structure_index') }}">la page statique</a>.</div>
+        <div class="map">Ce site a besoin du JavaScript pour fonctionner. Merci de l'activer ou rendez-vous sur <a href="{{ path('core_structure_map') }}">la page statique</a>.</div>
     </div>
     {% for key, region in areaMap %}
         <div class="area-map"
